--- a/index.html
+++ b/index.html
@@ -3,20 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Image Optimizer Pro - Compress & Optimize Images Online</title>
-    <meta name="description" content="Free online image compressor to optimize your images (JPEG, PNG, WEBP) with a simple slider. Reduce file size without losing significant quality. Fast, secure, and fully responsive." />
-    <meta name="keywords" content="image compressor, image optimizer, compress jpeg, compress png, reduce image size, photo optimizer, online tool" />
+    <title>DevTools - Free Online Image & PDF Tools</title>
+    <meta name="description" content="A collection of free, client-side tools to compress, convert, and edit your images and PDFs. Fast, secure, and easy to use." />
+    <meta name="keywords" content="image compressor, image optimizer, pdf compressor, merge pdf, split pdf, image resizer, image converter, online tools, free tools, devtools" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_ADSENSE_ID"
      crossorigin="anonymous"></script>
     <style>
       body {
         font-family: 'Inter', sans-serif;
+        background-color: #f8fafc; /* slate-50 */
+        background-image: radial-gradient(circle at top, #ffffff 0%, #f8fafc 50%);
       }
+      .dark body {
+        background-color: #020617; /* slate-950 */
+        background-image: radial-gradient(circle at top, #1e293b 0%, #020617 50%);
+      }
+
       /* Custom Range Slider Styles */
       input[type="range"] {
         -webkit-appearance: none;
@@ -44,12 +51,12 @@
         -webkit-appearance: none;
         appearance: none;
         margin-top: -6px; /* Position thumb vertically */
-        background-color: #2563eb; /* blue-600 */
+        background-color: #3b82f6; /* blue-500 */
         height: 1.5rem;
         width: 1.5rem;
         border-radius: 9999px;
         border: 4px solid white;
-        box-shadow: 0 0 0 2px #2563eb;
+        box-shadow: 0 0 0 2px #3b82f6; /* blue-500 */
         transition: transform 0.1s ease-in-out;
       }
       input[type="range"]:active::-webkit-slider-thumb {
@@ -71,12 +78,12 @@
 
       /* Mozilla (Firefox) Thumb */
       input[type="range"]::-moz-range-thumb {
-        background-color: #2563eb; /* blue-600 */
+        background-color: #3b82f6; /* blue-500 */
         height: 1.5rem;
         width: 1.5rem;
         border-radius: 9999px;
         border: 4px solid white;
-        box-shadow: 0 0 0 2px #2563eb;
+        box-shadow: 0 0 0 2px #3b82f6; /* blue-500 */
         transition: transform 0.1s ease-in-out;
       }
        input[type="range"]:active::-moz-range-thumb {
@@ -96,7 +103,7 @@
 }
 </script>
 </head>
-  <body class="bg-slate-50 dark:bg-slate-900 text-slate-800 dark:text-slate-200 antialiased">
+  <body class="bg-slate-50 dark:bg-slate-950 text-slate-800 dark:text-slate-200 antialiased">
     <div id="root"></div>
   </body>
 </html>
