--- a/index.html
+++ b/index.html
@@ -102,8 +102,12 @@
   }
 }
 </script>
+<!-- Add Babel to transpile JSX in the browser -->
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
   <body class="bg-slate-50 dark:bg-slate-950 text-slate-800 dark:text-slate-200 antialiased">
     <div id="root"></div>
+    <!-- Load the main app script, with type="text/babel" to get it transpiled -->
+    <script type="text/babel" data-type="module" src="./index.tsx"></script>
   </body>
 </html>
